[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Other/Fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Other/VolumeHud.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/clickText.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="VolumeHud" type="CanvasLayer"]
layer = 10
script = ExtResource( 2 )

[node name="VolumeBar" type="Control" parent="."]
margin_left = -166.0
margin_right = -126.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="VolumeBar"]
margin_left = 560.0
margin_right = 720.0
margin_bottom = 62.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VolumeBar"]
margin_left = 596.0
margin_top = 35.0
margin_right = 704.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "VOLUME"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="Control" parent="VolumeBar"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 580.0
margin_top = 28.0
margin_right = 588.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 592.0
margin_top = 26.0
margin_right = 600.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 604.0
margin_top = 24.0
margin_right = 612.0
margin_bottom = 30.0

[node name="7" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 616.0
margin_top = 22.0
margin_right = 624.0
margin_bottom = 30.0

[node name="6" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 628.0
margin_top = 20.0
margin_right = 636.0
margin_bottom = 30.0

[node name="5" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 640.0
margin_top = 18.0
margin_right = 648.0
margin_bottom = 30.0

[node name="4" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 652.0
margin_top = 16.0
margin_right = 660.0
margin_bottom = 30.0

[node name="3" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 664.0
margin_top = 14.0
margin_right = 672.0
margin_bottom = 30.0

[node name="2" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 676.0
margin_top = 12.0
margin_right = 684.0
margin_bottom = 30.0

[node name="1" type="ColorRect" parent="VolumeBar/Bar"]
margin_left = 688.0
margin_top = 10.0
margin_right = 696.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="VolumeStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Timer" type="Timer" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
